# xlsm-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xlsm_mcp/: __init__.py  __main__.py  data.py  exceptions.py  formatting.py  logger.py  macros.py  server.py  sheet.py  validation.py  workbook.py
